# AutoMesh-Public

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  automesh_cli.py  build_binary.sh  project.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml
assets/demo/: wheel_template.stl
assets/templates/aerospace/: fuselage_standard.stl  wing_standard.stl
assets/templates/automotive/: README.md  intake_large.stl  intake_standard.stl  mirror_compact.stl  mirror_standard.stl  wheel_16inch.stl  wheel_18inch.stl  wheel_20inch.stl
assets/test_data/drivaer/: DrivAer_Notchback_MOCK.stl
benchmarks/: large_scale_matching.py  ml_comparison.py
cpp/: CMakeLists.txt  README.md
cpp/examples/: basic_usage.cpp  drivaer_mrf.cpp
cpp/include/meshmind/: core.h
cpp/src/: core.cpp
docs/: _config.yml  benchmarks.md  index.md  roadmap.md
docs/getting-started/: installation.md
docs/source/: conf.py  index.md
examples/: 01_basic_detection.py  02_custom_templates.py  03_batch_processing.py  04_gui_usage.md  README.md
requirements/: base.txt  dev.txt
scripts/: build_wheels.py  full_demo.py  generate_templates.py  launch_gui.py  release.py  run_benchmarks.py  test_boeing737.py  test_comprehensive.py  train_meshcnn.py  validate_drivaer.py
src/meshmind/app/cli/: main.py
src/meshmind/app/gui/: main_window.py
src/meshmind/app/gui/widgets/: __init__.py  feature_overlay.py  mesh_viewer.py
src/meshmind/cfd/: mrf_generator.py  rule_templates.py  snappy_interface.py
src/meshmind/core/: descriptors.py  geometry.py  matcher.py  refinement.py
src/meshmind/core/recognition/: base_detector.py  ensemble.py  fpfh_matcher.py  meshcnn_detector.py
src/meshmind/datasets/: drivaer.py  modelnet.py
src/meshmind/discovery/: dynamic_loader.py
src/meshmind/io/: obj_handler.py  stl_handler.py
src/meshmind/ml/: __init__.py
src/meshmind/ml/inference/: detector.py
src/meshmind/ml/models/: meshcnn.py
src/meshmind/plugins/mesh_generators/: __init__.py  ftetwild.py
src/meshmind/qa/: mesh_validator.py  similarity_metrics.py
src/meshmind/registry/: detector_registry.py
src/meshmind/sdk/: mesher.py
tests/integration/: test_drivaer.py  test_drivaer_mrf.py
tests/unit/: test_io.py  test_milestones_p1.py  test_mrf_generation.py  test_phase2_recognition.py  test_phase3_cfd.py  test_phase4_sdk.py  test_phase5_plugins.py  test_phase6_qa.py
