[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshmind-afid"
version = "0.1.0"
description = "Open-source automatic mesh refinement tool bridging CAD and CFD"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "MeshMind Team" },
]
dependencies = [
    "numpy",
    "trimesh",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meshmind"]
